traefik/ovh/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
        - image: docker.io/kennethreitz/httpbin
          imagePullPolicy: IfNotPresent
          name: httpbin
          ports:
            - containerPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/httpbin`) && !HeaderRegexp(`Accept-Language`, `.*`)
      kind: Rule
      services:
        - name: httpbin
          port: 8000
      middlewares:
        - name: httpbin-stripprefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: httpbin-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /httpbin
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin-test-header
  annotations:
    traefik-route-validate.incubator4.com/validate: "false"
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/httpbin`) && HeaderRegexp(`Accept-Language`, `.*`)
      kind: Rule
      services:
        - name: httpbin
          port: 8000
      middlewares:
        - name: httpbin-stripprefix
        - name: httpbin-add-header
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: httpbin-add-header
spec:
  headers:
    customRequestHeaders:
      X-Is-Human: "yes"
